added missing files

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 
 body, html {
   background:red;
+  height:100%;
+  width:100%;
 
   .App{
-    background:blue
+    background:blue;
+    height:100%;
   }
 }
